--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lint-staged": "^9.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5"
+    "typescript": "^4.4.4"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
