--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
-    "vue": "^3.2.21",
+    "vue": "3.2.29",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "4.0.12",
     "vuex": "4.0.2"
@@ -32,7 +32,7 @@
     "lint-staged": "^9.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.5"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
